prevent overlap price / button

--- a/app/assets/styles/components/_modal.styl
+++ b/app/assets/styles/components/_modal.styl
@@ -88,7 +88,7 @@ channel-modal
         float left
         width 50%
       +above('l')
-        width 60%
+        width 50%
 
     &_price
       margin-bottom remify(60px)
@@ -100,7 +100,7 @@ channel-modal
         padding-top remify(180px)
         margin-bottom 0
       +above('l')
-        width 33%
+        width 43%
         margin-left 7%
 
       a
